# SimulatorManager

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  example1.cpp
include/: CMakeLists.txt  SimulationManager.hpp  SimulatorManager.hpp
proto/: CMakeLists.txt
proto/proto/: ssl_gc_common.proto  ssl_simulation_config.proto  ssl_simulation_control.proto  ssl_simulation_error.proto  ssl_simulation_robot_control.proto  ssl_simulation_robot_feedback.proto  ssl_vision_geometry.proto
src/: CMakeLists.txt  SimulationManager.cpp  SimulatorManager.cpp
